--- a/PregRest/src/main/webapp/estiloJuego.css
+++ b/PregRest/src/main/webapp/estiloJuego.css
@@ -10,7 +10,7 @@
 				padding: 0;
 				border: 0;
 				}
-	body {
+	.fondoEspecial {
 				display: flex;
 				justify-content: center;
 				width: 100%;
