--- a/PregRest/src/main/webapp/estiloJuego.css
+++ b/PregRest/src/main/webapp/estiloJuego.css
@@ -1,133 +1,196 @@
 @charset "UTF-8";
 
+* {
+	-ms-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: 0;
+}
 
-		* {
-				-ms-box-sizing: border-box;
-				-moz-box-sizing: border-box;
-				-webkit-box-sizing: border-box;
-				box-sizing: border-box;
-				margin: 0;
-				padding: 0;
-				border: 0;
-				}
-	.fondoEspecial {
-				display: flex;
-				justify-content: center;
-				width: 100%;
-				height: 100%;
-				background: url(https://media.istockphoto.com/vectors/background-of-questions-mark-help-symbol-white-color-on-yellow-vector-id468123738?b=1&k=20&m=468123738&s=612x612&w=0&h=prtEqPmaHqoA8zHU2c_0cJfDov3NYfkwZ2hMpTsDSb8=) repeat fixed;
-				font-family: 'Open Sans', sans-serif;
-				font-weight: 200;
-				}
-	.legend {
-					display: flex;
-				 	justify-content: center;
-				 	flex-direction: column;
-					width: 75%;
-					height:100%;
-					display: block;
-					background: rgba(248, 233, 35, 0.7);
-					padding: 15px;
-					color: black;
-					font-size: 20px;
-					text-align: center;
-					}
-		.input {
-  					display: flex;
-          			align-items: center;
-          			flex-direction: column;
-  					text-align: center;
-  					position: relative;
-  					width: 90%;
-  					margin: 15px auto;
-  				}
-	   input {
-				    width: 50%;
-				    padding: 10px 5px 10px 40px;
-				    display: block;
-				    border: 1px solid #EDEDED;
-				    border-radius: 4px;
-				    transition: 0.2s ease-out;
-				    color: rgb(232,59,104);
-				    text-align:center;
-				    align-items: center;
-				}
-	:focus {
-				      padding: 10px 5px 10px 10px;
-				      outline: 0;
-				      border-color: #FF7052;
-				 }
+.fondoEspecial {
+	width: 100%;
+	height: 100%;
+	background:
+		url(https://media.istockphoto.com/vectors/background-of-questions-mark-help-symbol-white-color-on-yellow-vector-id468123738?b=1&k=20&m=468123738&s=612x612&w=0&h=prtEqPmaHqoA8zHU2c_0cJfDov3NYfkwZ2hMpTsDSb8=)
+		repeat fixed;
+	font-family: 'Open Sans', sans-serif;
+	font-weight: 400;
+}
 
-	#quiz {
-					 display: block;
-					 margin-left: auto;
-					 margin-right: auto;
-					 height: 100px;
-					 width:170px;
-					 padding-top: 40px;
-					 z-index: -1;
-			}
-	h1 {
-			padding-top: 50px;
-			text-align:center;
-			color:#3B3C9B;
- 			}
-			
-	ul {
-			text-align:center;
-			font-size: 15px;
-		}
-	 h2 {
-			padding-top: 50px;
-			text-align:center;
-			color:#3B3C9B;
- 			 
-			}
-    div{
-			font-size: 14px;
-			text-align:center;
-			}
-	P {
-			text-align:center;
-			color: white;
-  			}
+.legend {
+	display: flex;
+	justify-content: center;
+	flex-direction: column;
+	width: 75%;
+	height: 100%;
+	background: rgba(248, 233, 35, 0.9);
+	padding: 15px;
+	margin: auto;
+	text-align: center;
+}
 
-	.pregresp {
-			text-align: left;
-			border: 1px solid #7DA5E0;
-			font-family: Rockwell;
-			font-size: 15px;
-			font-weight: bold;
-		}
-		
-	.pregunta {
-			color: #7DA5E0;
-		}
-		
-	.respuestas {
-				color: #000000;
-	}
-	.jugarPartida {
-				text-align: left;
-				font-family: Rockwell;
-				font-size: 15px;
-				font-weight: bold;
-	}
-	
-	.nueva { 
-			   display:flex;
-		       justify-content:center;
-		       flex-direction: column;
-		       align-items: flex-start;
-		       }
-	.registro {
-				display:flex;
-	}
+.input {
+	display: flex;
+	align-items: center;
+	flex-direction: column;
+	text-align: center;
+	position: relative;
+	width: 90%;
+	margin: 15px auto;
+}
 
-	.correcta {
-		color: green;
-	}
-	
-	.incorrecta {
-		color: red;
-	}
+input[type=text], input[type=submit], input[type=number] {
+	width: 50%;
+	padding: 10px 5px 10px 10px;
+	border: 1px solid #EDEDED;
+	border-radius: 4px;
+	transition: with 3s;
+	color: rgb(232, 59, 104);
+	text-align: center;
+}
+
+input[type=submit]:active {
+	transform: scale(0.98);
+	box-shadow: 3px 2px 22px 1px rgba(0, 0, 0, 0.24);
+}
+
+:focus {
+	padding: 12px 7px 12px 12px;
+	outline: 0;
+	border-color: #FF7052;
+}
+
+#inicio {
+	display: flex;
+}
+
+#monigote {
+	max-width: 400px;
+}
+
+#quiz {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	height: 200px;
+	width: 170px;
+	padding-top: 40px;
+	z-index: -1;
+}
+
+#menu {
+	display: flex;
+	justify-content: center;
+}
+
+#menu div {
+	border: solid 2px #3B3C9B;
+	padding: 10px 0px;
+	margin: 0px 20px;
+	width: 20%;
+}
+
+#menu a:link, #menu a:visited {
+	color: #3B3C9B;
+	font-weight: bold;
+	text-decoration: none;
+}
+
+h2 {
+	padding-top: 50px;
+	text-align: center;
+	color: #3B3C9B;
+	font-size: 22pt;
+}
+
+.pregresp {
+	text-align: left;
+	border: 1px solid #3B3C9B;
+	font-family: Rockwell;
+	font-size: 15pt;
+	font-weight: bold;
+}
+
+.pregunta {
+	padding: 10px 0px 5px 5px;
+	color: #3B3C9B;
+	border-top: 1px solid #3B3C9B;
+}
+
+.respuestas {
+	padding: 0px 0px 5px 5px; 
+	color: #2c76b4;
+}
+
+.jugarPartida {
+	text-align: left;
+	font-family: Rockwell;
+	font-size: 15px;
+	font-weight: bold;
+}
+
+#categorias {
+	margin: auto;
+	text-align: left;
+}
+
+.correcta {
+	color: green;
+}
+
+.incorrecta {
+	color: red;
+}
+
+#contenido {
+	display: flex;
+}
+
+.imagenTrofeo {
+	flex-grow: 1;
+}
+
+.imagenTrofeo img {
+	max-width: 200px;
+}
+
+#ranking {
+	flex-grow: 2;
+}
+
+#ranking table {
+	width: 100%;
+	border-collapse: collapse;
+	border: #3B3C9B 2px solid;
+}
+
+#ranking td, #ranking th {
+	border: 1px solid black;
+	padding: 5px 5px;
+	width: 50%;
+	border: #3B3C9B 2px solid;
+}
+
+#esperando {
+	position: relative;
+	top: 150px;
+	font-weight: bolder;
+}
+
+.esperando {
+  border: 20px solid #C0C0C0;
+  border-top: 20px solid #3B3C9B;
+  border-radius: 50%;
+  width: 160px;
+  height: 160px;
+  margin: 50px auto;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
